# bpf-developer-tutorial

./: .gitignore  .gitmodules  404.html  BLAZESYM_BUILD_WORKAROUND.md  CLAUDE.md  CNAME  ChatGPT.md  LICENSE  README.md  README.zh.md  README_en.md  TUTORIAL_IDEAS.md  book.toml  chatGPT.md  chatGPT1.md  index.html  print.html  searchindex.js  searchindex.json  src\36-userspace-ebpf\README.html
.github/: check_links.py
0-introduce/: README.md  index.html  introduce.md
1-helloworld/: README.md  index.html  minimal.bpf.c
10-hardirqs/: README.md  hardirqs.bpf.c  hardirqs.h  index.html
11-bootstrap/: README.md  bootstrap.bpf.c  bootstrap.h  index.html
11-tc/: README.md  tc.bpf.c
12-bindsnoop/: .gitignore  README.md  bindsnoop.bpf.c  bindsnoop.bpf.h  bindsnoop.md
12-profile/: Makefile  README.md  index.html
13-tcpconnlat/: README.md  index.html  tcpconnlat-libbpf-bootstrap.md  tcpconnlat.html  tcpconnlat.md
14-tcpstates/: .gitignore  README.md  index.html  tcpstates-libbpf-bootstrap.md  tcpstates.bpf.c  tcpstates.bpf.h  tcpstates.c
15-javagc/: Makefile  index.html
15-tcprtt/: README.md  index.html  tcprtt.h
16-memleak/: Makefile  README.md  index.html  memleak.c  trace_helpers.c
17-biopattern/: Makefile  README.md  biolatency.md  biopattern.c  biopattern.md  bitesize.md  index.html
18-biopattern/: biostacks.md
20-tc/: README.md  (+1 more)
src/xpu/flamegraph/profiler/: Cargo.toml  build.rs
src/xpu/flamegraph/profiler/.cargo/: config.toml
src/xpu/flamegraph/profiler/src/: main.rs  perf.rs  syscall.rs
src/xpu/flamegraph/profiler/src/bpf/: profile.bpf.c
(+877 files in other folders)
